[package]
name = "cli-proxy-api-desktop"
version = "0.1.0"
description = "Desktop wrapper for CLIProxyAPI runtime packages"
authors = ["CLIProxyAPI"]
edition = "2021"

[lib]
name = "cli_proxy_api_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-opener = "2.5.3"
